core-web/apps/dotcms-ui/src/app/view/components/dot-edit-layout-designer/dot-edit-layout-designer.component.scss
@use "variables" as *;
@import "mixins";

:host {
    min-width: 750px;

    ::ng-deep {
        .p-button-vertical {
            .p-button-label {
                text-transform: capitalize !important;
            }
        }
    }
}

form {
    display: flex;
    flex-direction: column;
    height: 100%;
    margin-right: 80px;
}

.dot-edit-layout__actions {
    display: flex;
    height: $dot-secondary-toolbar-height;
    justify-content: flex-end;
    padding: $spacing-3;
}

.dot-edit-layout__toolbar {
    background-color: $white;
    display: block;
    position: relative;
    z-index: 1;

    ::ng-deep {
        .p-toolbar {
            border-bottom: solid 1px $color-palette-gray-500;
            padding: $spacing-3;
        }
    }
}

.dot-edit-layout__toolbar-action-cancel {
    margin-right: $spacing-1;
}

.dot-edit__layout-actions-right {
    display: flex;
    align-items: center;
}

